# Scene-Reconstruction

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  do_comps.py  web
bundler/: RunBundler.sh  config.txt  list.txt
bundler/lib/f2c/: Makefile
bundler/lib/minpack/: Makefile
bundler/src/: BaseApp.h  Bundle.cpp  BundleIO.cpp  BundlerApp.cpp  BundlerApp.h  Makefile
cpp/: CMakeLists.txt  temp_creator.cpp
cpp/feature_detect/: DisplayImage
cpp/lib/: CMakeLists.txt  FeatureDetectorSIFT.h  Image.h
cpp/src/: CMakeLists.txt  FMTest.cpp  FeatureDetectorSIFT.cpp  GenCloud.cpp  TrackCreator.h
docs/: Diagram.mdj  comps_pipeline.sketch
docs/meetings/: 9-29.md
feature_detect/: .gitattributes  .gitignore  CMakeLists.txt  FDTest  FDTest.cpp  FMTest  FMTest.cpp  FeatureDetect  FeatureDetector.cpp  FeatureDetector.h  FeatureDetectorSIFT.cpp  FeatureDetectorSIFT.h  FeatureDetectorTest  FeatureDetectorTest.cpp  GenCloud.cpp  Image.cpp  Image.h  KeypointDescriptor.h  KeypointMetadata.h  OpenCV.h  TrackCreator.cpp  detect_basic.cpp  detect_basic.py  example output.txt
feature_detect/adamtests/: detect_basic.cpp  detect_basic.py
lib/: CMakeLists.txt  FeatureDetector.h  KeypointDescriptor.h
python/: .gitattributes  .gitignore  do_comps.py  image.py  image_pair.py  process_lots_of_images.py  requirements.txt  server.py  track_creator.py  venv_activate  venv_activate.fish
python/adams_old_stuff/: bfm_orb.py  bfm_ratio.py  depthmap.py  out.ply  stereo_match.py  test.py  video_to_frames.py  video_to_frames2.py
python/cleanup/: chapelPointMaker.py  coordinates.py  coords.ply  frameworkpython  output.py  track_creator.py
python/debug/: chapelPointMaker.py  debug.py  manualTest.py  pdppoints.txt  readme.txt  requirements.txt  runTests.py  shelfpoints.txt  triangulate.py  triangulateManualPoints.py
python/debug/cube_images/: cube.ply
python/debug/utils/: CVFuncs.py  KMatrix.py  __init__.py  coordinates.py  debug.py  image.py  line.py
python/env/: .gitignore
python/manualPoints/: generateManualMatches.py  imageLib.py  wallpoints.txt
python/points/: chapelpoints.txt  images.py  manualKeypoints.py  triangulateManualPoints.py
python/static/: blurredchapel.ply
python/static/js/: PLYLoader.js
python/templates/: home.html  submit_job.html
python/utils/: CVFuncs.py  KMatrix.py  cImage.py  draw.py  image.py  images.py  line.py  output.py  ply_file.py  test.py  trackCreator.py  track_test.py  triangulate.py  triangulateManualPoints.py
src/: CMakeLists.txt  FeatureDetectorSIFT.cpp  GenCloud.cpp  Image.cpp
